--- a/src/app/header-component/header-component.component.html
+++ b/src/app/header-component/header-component.component.html
@@ -3,13 +3,136 @@
                 <div class="first-container">
                         <img src="images/logo.avif" alt="">
                         <div class="collections-Container">
-                                <div>New Arrivals</div>
-                                <div>Brands</div>
-                                <div>Makeup</div>
-                                <div>Skin</div>
-                                <div>Hair</div>
-                                <div>Combo & Gift Sets</div>
-                                <div>Fragrance</div>
+                                <div class="dropdown">
+                                        <div class="dropdown-btn">New Arrivals</div>
+                                        <!-- Dropdown Menu for New Arrivals -->
+                                        <div class="dropdown-content">
+                                                <a href="#">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                        </div>
+                                </div>
+                                <div class="dropdown">
+                                        <div class="dropdown-btn">Brands</div>
+                                        <!-- Dropdown Menu for Brands -->
+                                        <div class="dropdown-content">
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                        </div>
+                                </div>
+                                <div class="dropdown">
+                                        <div class="dropdown-btn">Makeup</div>
+                                        <!-- Dropdown Menu for Makeup -->
+                                        <div class="dropdown-content">
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                        </div>
+                                </div>
+                                <div class="dropdown">
+                                        <div class="dropdown-btn">Skin</div>
+                                        <!-- Dropdown Menu for Skin -->
+                                        <div class="dropdown-content">
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                        </div>
+                                </div>
+                                <div class="dropdown">
+                                        <div class="dropdown-btn">Hair</div>
+                                        <!-- Dropdown Menu for Hair -->
+                                        <div class="dropdown-content">
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                        </div>
+                                </div>
+                                <div class="dropdown">
+                                        <div class="dropdown-btn">Combo & Gift Sets</div>
+                                        <!-- Dropdown Menu for Combo & Gift Sets -->
+                                        <div class="dropdown-content">
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                                <a href="">Eyes</a>
+                                                <a href="">Brushes</a>
+                                                <a href="">Face</a>
+                                                <a href="">Kits</a>
+                                                <a href="">Lipsticks</a>
+                                                <a href="">Nails</a>
+                                        </div>
+                                </div>
+                                <div class="dropdown">
+                                        <div class="dropdown-btn">Fragrance</div>
+                                        <!-- Dropdown Menu for Fragrance -->
+                                        <div class="dropdown-content">
+                                                <div>
+                                                        <a href="">Eyes</a>
+                                                        <a href="">Brushes</a>
+                                                        <a href="">Face</a>
+                                                        <a href="">Kits</a>
+                                                        <a href="">Lipsticks</a>
+                                                        <a href="">Nails</a>
+                                                        <a href="">Eyes</a>
+                                                        <a href="">Brushes</a>
+                                                        <a href="">Face</a>
+                                                        <a href="">Kits</a>
+                                                        <a href="">Lipsticks</a>
+                                                        <a href="">Nails</a>
+        
+                                                </div>
+                                                
+                                        </div>
+                                </div>
                                 <div><img src="images/hok-rewards.webp" alt="" class="hok-rewardsimage"></div>
                         </div>
                 </div>
@@ -19,7 +142,5 @@
                         <li><i class="fas fa-shopping-cart" (click)="moveToCart()"></i></li>
                         <li><i class="fas fa-sign-out-alt" (click)="logout()"></i></li>
                 </div>
-                
         </nav>
-
 </div>
