--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,19 @@
-<p>cart works!</p>
+<div class="cart-container">
+        <h2>Your Cart</h2>
+
+        <div *ngFor="let product of products$ | async" class="cart-item">
+                <img [src]="product.images[0]" alt="{{ product.title }}">
+                <div>
+                        <h3>{{ product.title }}</h3>
+                        <p>{{ product.price | currency: 'INR' }}</p>
+                </div>
+                <button (click)="removeFromCart(product.id)">Remove</button>
+        </div>
+
+        <div class="cart-summary">
+                <h3>Total:
+                        {{ totalPrice$ | async | currency: 'INR' }}
+                </h3>
+                <button>Proceed to Checkout</button>
+        </div>
+</div>
