--- a/src/app/header-component/header-component.component.css
+++ b/src/app/header-component/header-component.component.css
@@ -1,67 +1,133 @@
 nav {
-        display: grid;
-        grid-template-columns: 4fr 1fr; 
-        cursor: pointer;
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-        margin-top: 4px;
-            margin-left: 3px;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    cursor: pointer;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    margin-left: 3px;
+    background-color: #fff;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    background-color: white;
+}
+
+a {
+    color: rgb(82, 82, 82);
+    text-decoration: none;
+    display: block;
+    margin-bottom: 8px;
+}
+a:hover{
+    color: black;
+}
+
+.dropdown-btn {
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    color: black;
+    position: relative;
+}
+.dropdown-btn::after{
+    content:'';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 1px;
+    background-color: black;
+    transition: width 0.3s ease;
+}
+.dropdown-btn:hover::after{
+    width: 100%;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    width: 100%;
+    padding: 10px;
+}
+
+.dropdown-content div {
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.collections-Container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 40px;
+    cursor: pointer;
+
+}
+
+.second-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    justify-content: center;
+    color: black;
+    margin-top: 20px;
+
+    li {
+        list-style-type: none;
     }
-    
- 
+}
+
+.hok-rewardsimage {
+    width: 80px;
+    height: 40px;
+}
+
+input {
+    width: 400px;
+    height: 30px;
+    margin-left: 30px;
+}
+.first-container {
+    margin-top: 2px;
+}
+
+@media screen and (max-width: 768px) {
+    nav {
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+
+    }
+
+    .first-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
     .collections-Container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-left: 40px;
-        cursor: pointer;
-       
+        display: none;
     }
-    
+
     .second-container {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr); 
-        gap: 20px;
-        justify-content: center;
-        color: black;
-        margin-top: 20px;
-        li{
-                list-style-type: none;
-        }
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 15px;
     }
-    
-    .hok-rewardsimage {
-        width: 80px;
-        height: 40px;
-    }
-    
-    input {
-        width: 400px;
-        height: 30px;
-        margin-left: 30px;
-    }
-    
-    @media screen and (max-width: 768px) {
-        nav {
-            grid-template-columns: 1fr 1fr; 
-            grid-gap: 10px;
-            
-        }
-    
-        .first-container {
-            flex-direction: column;
-            align-items: flex-start;
-        }
-    
-        .collections-Container {
-            display: none;
-        }
-    
-        .second-container {
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-            gap: 15px;
-        }
-    
-    }
-    
+
+}
