--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,9 @@
+.video-container {
+        margin-top: 100px;
 
-.video-container{
-        margin-top: 20px;
-        
 }
-.images-container{
+
+.images-container {
         display: flex;
         gap: 10px;
         background-color: rgb(225 233 255);
@@ -12,66 +12,99 @@
         align-items: center;
 }
 
-p{
+p {
         font-size: 40px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-img{
+
+img {
         width: 300px;
         height: 300px;
 }
-.video2-container{
+
+.video2-container {
         display: flex;
 
 }
-.aside-paragraph{
+
+.aside-paragraph {
         text-align: center;
         justify-content: center;
         width: 500px;
-        
+
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         margin-top: 10%;
         padding: 20px;
-        p{
+
+        p {
                 font-size: 15px;
                 font-family: 'Courier New', Courier, monospace;
         }
 }
-.video3-container{
+
+.video3-container {
         display: flex;
         gap: 10px;
         margin-top: 10px;
-        p{
+
+        p {
                 font-size: 20px;
                 margin-left: 10px;
-               
+
         }
-        .video4{
+
+        .video4 {
                 border: 1px solid black;
                 border-radius: 10px;
-                
+
         }
-        .image-1{
-                border:1px solid black;
+
+        .image-1 {
+                border: 1px solid black;
                 border-radius: 10px;
-                img{
+
+                img {
                         width: 100%;
                         height: auto;
                         cursor: pointer;
                 }
         }
-        
+
 }
-@media (max-width:700px){
-        .images-container{
+.toast {
+        position: fixed;
+        right: -80px;
+        top: 50px;
+        height: 25px;
+        transform: translateX(-50%);
+        background-color: rgb(242, 139, 156);
+        color: white;
+        padding: 10px 20px;
+        border-radius: 5px;
+        z-index: 1000;
+        animation: fadeInOut 30s forwards;
+}
+
+
+
+.toastmessgae {
+        font-size: 20px;
+        margin: 0px;
+        font-weight: 100;
+        font-family: 'Times New Roman', Times, serif
+}
+
+@media (max-width:700px) {
+        .images-container {
                 display: grid;
                 height: auto;
         }
-        .video2-container{
-               flex-direction: column;
-               align-items: center;
-               text-align: center;
-               font-size: 20px;
+
+        .video2-container {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                font-size: 20px;
 
         }
 }
