--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,9 +1,13 @@
+<!-- src/app/products/products.component.html -->
+
 <div class="products-container">
-        <div *ngFor="let product of Products" class="product-card">
-            <img [src]="product.images[0]" alt="{{ product.title }}">
-            <h3>{{ product.title }}</h3>
-            <p><strong>{{ product.price | currency: 'INR' }}</strong> 10% off</p>
-            <button class="select-button">Select Shead</button>
-        </div>
+    <div *ngFor="let product of Products" class="product-card">
+      <img [src]="product.images[0]" alt="{{ product.title }}">
+      <h3>{{ product.title }}</h3>
+      <p><strong>{{ product.price | currency: 'INR' }}</strong> 10% off <i class="fas fa-heart"></i></p>
+      <button (click)="addToCart(product)" class="select-button">
+        Add to Cart
+      </button>
     </div>
-    
+  </div>
+  
