--- a/src/app/login-in/login-in.component.css
+++ b/src/app/login-in/login-in.component.css
@@ -3,8 +3,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;  
-        width: 100vw;   /* Full viewport width */
+        height: 98vh;  
+        width: 100% ;  /* Full viewport width */
         background-color: #fff5f3; /* Background color */
     }
     
