--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -9,7 +9,7 @@
 }
 
 .product-card {
-        width: 250px;
+        width: 230px;
         padding: 15px;
         align-items: center;
         justify-content: center;
@@ -18,27 +18,32 @@
 h3 {
         margin-bottom: 5px;
         font-size: 18px;
-        
+
 }
-i{
+
+i {
         margin-left: 10px;
         cursor: pointer;
         font-size: 17px;
-        
+
 }
-i:hover{
-        color: rgb(249, 112, 135);;
+
+i:hover {
+        color: rgb(249, 112, 135);
+        ;
 }
+
 p {
         margin-top: 30px;
         color: rgb(243, 174, 186);
         font-size: 15px;
         font-weight: 300px;
-        strong{
+
+        strong {
                 color: black;
                 font-size: 20px;
         }
-        
+
 }
 
 img {
@@ -56,6 +61,41 @@ img {
         font-weight: 600;
 
 }
-.select-button:hover{
+
+.select-button:hover {
         background-color: rgb(254, 245, 245);
+}
+
+
+
+
+.products-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+}
+
+
+.nav-button {
+        background-color: rgb(249, 112, 135);
+        color: white;
+        border: none;
+        padding: 10px;
+        font-size: 20px;
+        cursor: pointer;
+        border-radius: 50%;
+}
+
+.nav-button:disabled {
+        background-color: #ddd;
+        cursor: not-allowed;
+}
+
+.left {
+        margin-right: 10px;
+}
+
+.right {
+        margin-left: 10px;
 }
